themes/blankslate-child/sass/components/_tease-project.scss
.c-tease-project {
  border-bottom: var(--border-thin) solid var(--color-gray-light);
  display: grid;
  gap: 2rem;
  grid-template-rows: 1fr 1fr;
  margin-top: 3rem;
  padding-bottom: 3rem;

  @media (min-width: $breakpoint-medium) {
    gap: 3rem;
    grid-template-columns: 1.75fr 1fr;
    grid-template-rows: 2fr;
    padding-right: 6rem;
  }
}


.c-tease-project__content {
  margin-left: 1.5rem;
  margin-right: 1.5rem;

  @media (min-width: $breakpoint-medium) {
    align-self: end;
    margin-left: 0;
    margin-right: 0;
  }
}


.c-tease-project__title {
  font-size: 2rem;
  line-height: var(--line-height-tight);
  max-width: 65ch;
}

.c-tease-project__link {
  color: var(--color-white);
  text-decoration: none;

  &:hover,
  &:focus {
    color: var(--color-gold);
    text-decoration: underline;
  }

  &:active {
    text-decoration: none;
  }
}


.c-tease-project__excerpt {
  margin-top: 0.5rem;
  max-width: 65ch;
}


.c-tease-project__tools {
  display: flex;
  gap: 1rem;
  margin-top: 2rem;
}


.c-tease-project__transcript {
  font-weight: var(--type-weight-bold);
  flex-grow: 1;
  margin-right: 1rem;
}

